--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -29,6 +29,7 @@ dependencies:
   amplify_datastore_plugin_interface: ^0.1.0
   amplify_flutter: ^0.1.0
   cached_network_image: ^2.5.0
+  flutter_svg: ^0.19.3
   google_fonts: ^1.1.2
   intl: ^0.15.7
   provider: ^4.3.3
@@ -49,9 +50,8 @@ flutter:
   # the material Icons class.
   uses-material-design: true
   # To add assets to your application, add an assets section, like this:
-  # assets:
-  #   - images/a_dot_burr.jpeg
-  #   - images/a_dot_ham.jpeg
+  assets:
+    - assets/
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware.
   # For details regarding adding assets from package dependencies, see
