--- a/.github/workflows/app_release.yml
+++ b/.github/workflows/app_release.yml
@@ -36,7 +36,7 @@ jobs:
           java-version: "12.x"
       - uses: subosito/flutter-action@v1
         with:
-          channel: 'stable'
+          channel: 'beta'
       - name: Get version.txt
         uses: actions/download-artifact@v2
         with:
